# app/admin/internal/data/model/platform_admins.gen.go
@@ -1,0 +1,37 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
+const TableNamePlatformAdmin = "platform_admins"
+
+// PlatformAdmin 平台管理员表
+type PlatformAdmin struct {
+	ID               uint64         `gorm:"column:id;type:bigint unsigned;primaryKey;autoIncrement:true;comment:平台管理员主键" json:"id"`                                                    // 平台管理员主键
+	Username         string         `gorm:"column:username;type:varchar(64);not null;uniqueIndex:uk_platform_admins_username,priority:1;comment:平台管理员唯一用户名" json:"username"`           // 平台管理员唯一用户名
+	Email            *string        `gorm:"column:email;type:varchar(191);uniqueIndex:uk_platform_admins_email,priority:1;comment:平台管理员邮箱" json:"email"`                               // 平台管理员邮箱
+	Phone            *string        `gorm:"column:phone;type:varchar(32);uniqueIndex:uk_platform_admins_phone,priority:1;comment:平台管理员手机号" json:"phone"`                               // 平台管理员手机号
+	PasswordHash     string         `gorm:"column:password_hash;type:varchar(255);not null;comment:Argon2id密码哈希" json:"password_hash"`                                                 // Argon2id密码哈希
+	DisplayName      string         `gorm:"column:display_name;type:varchar(128);not null;comment:显示名称" json:"display_name"`                                                           // 显示名称
+	AvatarURL        *string        `gorm:"column:avatar_url;type:text;comment:头像地址" json:"avatar_url"`                                                                                // 头像地址
+	MFAEnabled       bool           `gorm:"column:mfa_enabled;type:tinyint(1);not null;default:0;comment:是否启用登录MFA：0否，1是" json:"mfa_enabled"`                                          // 是否启用登录MFA：0否，1是
+	MFAChannel       string         `gorm:"column:mfa_channel;type:varchar(16);not null;default:email;comment:MFA渠道：email邮件，sms短信" json:"mfa_channel"`                                 // MFA渠道：email邮件，sms短信
+	Status           uint8          `gorm:"column:status;type:tinyint unsigned;not null;index:idx_platform_admins_status,priority:1;default:1;comment:账号状态：1启用，2禁用，3锁定" json:"status"` // 账号状态：1启用，2禁用，3锁定
+	FailedLoginCount uint32         `gorm:"column:failed_login_count;type:int unsigned;not null;default:0;comment:连续登录失败次数" json:"failed_login_count"`                                 // 连续登录失败次数
+	LockedUntil      *time.Time     `gorm:"column:locked_until;type:datetime(3);comment:锁定截止时间" json:"locked_until"`                                                                   // 锁定截止时间
+	CreatedAt        time.Time      `gorm:"column:created_at;type:datetime(3);not null;comment:创建时间" json:"created_at"`                                                                // 创建时间
+	UpdatedAt        time.Time      `gorm:"column:updated_at;type:datetime(3);not null;comment:更新时间" json:"updated_at"`                                                                // 更新时间
+	DeletedAt        gorm.DeletedAt `gorm:"column:deleted_at;type:datetime(3);index:idx_platform_admins_status,priority:2;comment:逻辑删除时间" json:"deleted_at"`                           // 逻辑删除时间
+}
+
+// TableName PlatformAdmin's table name
+func (*PlatformAdmin) TableName() string {
+	return TableNamePlatformAdmin
+}
